src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

body {
  margin: 0;
  font-family: 'Inter',sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1{
  font-size:2.5rem;
}

*{
  font-size: 1.1rem;
}

small{
  font-size:.9rem;
}

.container {
  max-width:82.5%;
  margin-right: auto;
  margin-left: auto;
  height:100vh;
}

.notes-list{
  display:grid;
  grid-gap: 1.25rem;
  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
}

.note.new{
  background-color:#d4ffd4
}

textarea{
  border:none;
  resize:none;
  background:none;
  font-family:'Inter',sans-serif;
}

textarea:focus{
  outline: none;
}

.note{
  background-color:#fffacc;
  border-radius: 10px;
  padding:1rem;
  min-height: 170px;
  display:flex;
  flex-direction:column;
  justify-content:space-between;
  white-space: pre-wrap; /*to have new lines*/
}

.note-footer{
  display:flex;
  align-items:center;
  justify-content:space-between;
}

.save-btn{
  font-size: 1rem;
  background-color: #fbfbfb;
  border:none;
  border-radius:15px;
  padding: 12px 15px;
  box-shadow:  4px 4px 6px #bae0ba,
             -4px -4px 8px #ebffeb;
}

.save-btn:hover{
  cursor: pointer;
  background-color:#fff;
}

.delete-icon{
  cursor:pointer;
}

.search{
  display:flex;
  align-items:center;
  background:rgb(245, 245, 245);
  border-radius:10px;
  padding:14px;
  margin-bottom: 1.5rem;
}

.search-icon{
  opacity: .75;
}

.search-input{
  flex: 1;
  border:none;
  background:none;
}

.search-input:focus{
  outline:none;
}

.header{
  display:flex;
  align-items:center;
  justify-content: space-between;
}

.togg-btn{
  font-size: 1rem;
  background-color:rgb(245, 245, 245);
  border:none;
  border-radius:15px;
  padding: 12px 15px;
  cursor: pointer;
}

.empty-msg{
  display:flex;
  justify-content:center;
  opacity: .2;
  font-size:2rem;
}

.dark-mode{
  background-color:#212121;
  background-repeat: repeat;
}

.dark-mode h1{
  color:white;
}

.dark-mode .search{
  background-color:#505050;
}

.dark-mode .search-icon{
  color:white;
}

.dark-mode .search-input{
  color:white;
}

.dark-mode .note{
  background-color:#fff68d;
}

.dark-mode .note.new{
  background-color:#c2ffc2
}

.dark-mode .togg-btn{
  background-color:#505050;
}

.dark-mode .sun-icon{
  color:white;
}

.dark-mode .empty-msg{
  color:#5a5a5a;
  opacity: 1;
}

